<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APP</string>
    <string name="app_id">399084896860704</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="hintProjeto">Insira um tipo de projeto (PL, PLP, PEC, PDC, PRC)</string>
    <string name="hintAno">Insira o ano</string>
    <string name="hintNumero">Insira o numero do projeto</string>
    <string name="hintDataInicio">Insira a data de início (dd/mm/aaaa)</string>
    <string name="hintNomeAutor">Insira o nome do parlamentar</string>
    <string name="hintSiglaPartido">Insira a sigla do partido</string>
    <string name="hintUF">Insira a UF</string>
    <string name="imgbuttonVoltar">imgbuttonVoltar</string>
    <string name="imgbuttonOK">imgbuttonOK</string>
    <string name="imgbuttonBUSCA">imgbuttonBUSCA</string>
    <string name="imgbuttonSOBRE">imgbuttonSOBRE</string>
    <string name="imgviewLOGO">imgviewLOGO</string>
    <string name="imgviewSOBREPROV">imgviewSOBREPROV</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="hello_world">Hello world!</string>
    <string name="projetoFrase">Escolha um tipo</string>
    <string name="partidos">Escolha um partido</string>
    <string-array name="partidos">
        <item>Todos os Partidos</item>
        <item>PMDB</item>
        <item>PT</item>
        <item>PP</item>
        <item>PSDB</item>
        <item>PDT</item>
        <item>PTB</item>
        <item>PTdoB</item>
        <item>DEM</item>
        <item>PR</item>
        <item>PSB</item>
        <item>PPS</item>
        <item>PSC</item>
        <item>PCdoB</item>
        <item>PV</item>
        <item>PRB</item>
        <item>PRP</item>
        <item>PMN</item>
        <item>PSL</item>
        <item>PSD</item>
        <item>PTC</item>
        <item>PSDC</item>
        <item>PHS</item>
        <item>PTN</item>
        <item>PRTB</item>
        <item>PSOL</item>
        <item>PSTU</item>
        <item>PCB</item>
        <item>PPL</item>
        <item>PCO</item>
        <item>PPEN</item>
        <item>PROS</item>
        <item>SDD</item>
    </string-array>
    <string-array name="projetos">
        <item>Projeto de Lei</item>
        <item>Projeto de Emenda à Constituição</item>
        <item>Projeto de Lei Complementar</item>
        <item>Projetos de Decreto Legislativo </item>
        <item>Projeto de Resolução</item>
    </string-array>

    <string name="imgbuttonFavorito">imgbuttonFavorito</string>
    <string name="imgbuttonPesquisar">imgbuttonPesquisar</string>
    <string name="imgbuttonNaoFavorito">imgbuttonNaoFavorito</string>
    <string name="estadoFrase">Escolha um estado</string>

    <string-array name="estados">
        <item>Todos os Estados</item>
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espirito Santo</item>
        <item>Goias</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>

</resources>