<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Busca" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/textSigla"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintProjeto" />

        <EditText
            android:id="@+id/textAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintAno" />

        <EditText
            android:id="@+id/textDataIni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintDataInicio" />

        <EditText
            android:id="@+id/textDataFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintDataFinal" />

        <EditText
            android:id="@+id/textUF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintUF" />

        <EditText
            android:id="@+id/textAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintAutor" />

        <EditText
            android:id="@+id/textNomeAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintNomeAutor" />

        <EditText
            android:id="@+id/textSiglaPartido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintSiglaPartido" />

        <EditText
            android:id="@+id/textNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintNumero" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/okbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/imgbuttonOK"
        android:src="@drawable/okbutton" />

    <ImageButton
        android:id="@+id/voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/okbutton"
        android:contentDescription="@string/imgbuttonVoltar"
        android:src="@drawable/voltar" />

</RelativeLayout>