<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/app_bg"
    tools:context=".MenuPrincipal" >

    <ImageView
        android:id="@+id/imgviewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imgviewLOGO"
        android:scaleType="fitStart"
        android:src="@drawable/app_logo" />

    <ImageButton
        android:id="@+id/imgbutton_busca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/imgbutton_sobre"
        android:contentDescription="@string/imgbuttonBUSCA"
        android:src="@drawable/button_busca_smaller" />

    <ImageButton
        android:id="@+id/imgbutton_sobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="38dp"
        android:contentDescription="@string/imgbuttonSOBRE"
        android:src="@drawable/button_sobre_smaller" />

    <Button
        android:id="@+id/historico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgbutton_sobre"
        android:layout_below="@+id/imgbutton_busca"
        android:text="Histórico" />

    <Button
        android:id="@+id/favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imgbutton_busca"
        android:layout_below="@+id/imgbutton_busca"
        android:text="Favoritos" />

</RelativeLayout>